Fix card text overlay and boostrap spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,15 +52,6 @@ a:hover {
   }
 }
 
-#me {
-  display: flex;
-  justify-content: center;
-  img {
-    width: 10rem;
-    border-radius: 100%;
-  }
-}
-
 main {
   margin-top: 100px;
   color: white;
@@ -70,9 +61,6 @@ main {
   background-color: $darkOrange;
   background-blend-mode: soft-light;
   min-height: calc(100vh - 160px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   h1 {
     text-align: center;
   }
@@ -85,26 +73,27 @@ main {
   p {
     text-indent: 2rem;
   }
-  .main-description {
-    max-width: 70%;
-    margin: auto auto;
+  #me {
+    display: flex;
+    justify-content: center;
+    img {
+      width: 10rem;
+      border-radius: 100%;
+    }
   }
-  .main-skills {
-    .skills {
+  .skills {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    .skill {
+      background-color: white;
+      height: 90px;
+      width: 90px;
       display: flex;
+      align-items: center;
       justify-content: center;
-      
-      flex-wrap: wrap;
-      .skill {
-        background-color: white;
-        height: 90px;
-        width: 90px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50px;
-        margin: 20px;
-      }
+      border-radius: 50px;
+      margin: 20px;
     }
   }
   
@@ -134,6 +123,19 @@ main {
         img {
           width: 30px;
         }
+    }
+    .description { 
+      /*display: none;*/
+      display: flex;
+      align-items: center;
+      position: absolute; 
+      background-color: rgba(0,0,0,.8);
+      top: 0; 
+      left: 0;
+      padding: 2rem;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
     }
   }
 }
@@ -178,18 +180,4 @@ footer {
   html {
       font-size: 20px;
   }
-}
-
-.description { 
-  /*display: none;*/
-  display: flex;
-  align-items: center;
-  position: absolute; 
-  background-color: rgba(0,0,0,.8);
-  top: 0; 
-  left: 0;
-  padding: 2rem;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
 }
